[gd_scene load_steps=2 format=3 uid="uid://c1sky8f6oca1f"]

[ext_resource type="Script" path="res://Code/Menus.gd" id="1_txtty"]

[node name="Level Selection" type="CanvasLayer"]
script = ExtResource("1_txtty")

[node name="Level One" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.077
anchor_right = 0.26
anchor_bottom = 0.231
offset_left = 0.463997
offset_top = 0.103996
offset_right = 0.47998
offset_bottom = 0.311996
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Level One"

[node name="Level Two" type="Button" parent="."]
modulate = Color(1, 0, 0.207843, 1)
anchors_preset = -1
anchor_left = 0.328
anchor_top = 0.077
anchor_right = 0.545
anchor_bottom = 0.231
offset_left = 0.143982
offset_top = 0.103996
offset_right = 0.159973
offset_bottom = 0.311996
theme_override_font_sizes/font_size = 50
text = "Level Two"

[node name="Level Three" type="Button" parent="."]
modulate = Color(1, 0, 0.207843, 1)
anchors_preset = -1
anchor_left = 0.633
anchor_top = 0.077
anchor_right = 0.882
anchor_bottom = 0.231
offset_left = -0.216003
offset_top = 0.103996
offset_right = -37.064
offset_bottom = 0.311996
theme_override_font_sizes/font_size = 50
text = "Level Three"

[connection signal="pressed" from="Level One" to="." method="LevelOne"]
[connection signal="pressed" from="Level Two" to="." method="LevelTwo"]
[connection signal="pressed" from="Level Three" to="." method="LevelThree"]
