[gd_scene load_steps=5 format=3 uid="uid://brqjfpxl84ib2"]

[ext_resource type="Script" path="res://Code/Menus.gd" id="1_ofh0p"]
[ext_resource type="Texture2D" uid="uid://cebqwaxhebr3t" path="res://Assets/Sprites/Tama(1024x1024).png" id="2_xtb0c"]
[ext_resource type="Texture2D" uid="uid://drbdmriuiwo1m" path="res://Assets/Buttons/Start_Button.png" id="3_23b65"]
[ext_resource type="Texture2D" uid="uid://bb8vfiv51rpe3" path="res://Assets/Buttons/Exit_Button.png" id="4_xybch"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_ofh0p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(576.5, 324.5)
scale = Vector2(1.12402, 0.631836)
texture = ExtResource("2_xtb0c")

[node name="Start" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.391
anchor_top = 0.077
anchor_right = 0.57
anchor_bottom = 0.396
offset_left = -0.432037
offset_top = 0.103996
offset_right = 825.36
offset_bottom = 825.392
scale = Vector2(0.2, 0.2)
icon = ExtResource("3_23b65")
flat = true

[node name="Exit" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.391
anchor_top = 0.617
anchor_right = 0.57
anchor_bottom = 0.936
offset_left = -0.432037
offset_top = 0.18396
offset_right = 825.36
offset_bottom = 825.472
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 46
icon = ExtResource("4_xybch")
flat = true

[node name="Level Select" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.693
anchor_top = 0.341
anchor_right = 0.872
anchor_bottom = 0.66
offset_left = -0.335999
offset_top = 0.0319824
offset_right = 825.456
offset_bottom = 825.32
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 170
text = "Level Select"
flat = true

[connection signal="pressed" from="Start" to="." method="Start"]
[connection signal="pressed" from="Exit" to="." method="ExitGame"]
[connection signal="pressed" from="Level Select" to="." method="LevelSelect"]
